--- a/iArchive/Tang-Nano-4k/nano4k_hdmi_tx/FPGADesign/nano4k_hdmi_tx/impl/project_process_config.json
+++ b/iArchive/Tang-Nano-4k/nano4k_hdmi_tx/FPGADesign/nano4k_hdmi_tx/impl/project_process_config.json
@@ -59,7 +59,7 @@
  "Resolve_Mixed_Drivers" : false,
  "Resource_Sharing" : true,
  "Retiming" : false,
- "Route_Maxfan" : "23",
+ "Route_Maxfan" : 23,
  "Route_Option" : "0",
  "Run_Timing_Driven" : true,
  "SECURE_MODE" : false,
@@ -70,12 +70,12 @@
  "Synthesis On/Off Implemented as Translate On/Off" : false,
  "Synthesize_tool" : "GowinSyn",
  "TclPre" : "",
- "TopModule" : "sram_frambuffer_test_top",
+ "TopModule" : "pattern_generator_top",
  "USERCODE" : "default",
  "Unused_Pin" : "As_input_tri_stated_with_pull_up",
  "Update_Compile_Point_Timing_Data" : false,
  "Use_Clock_Period_for_Unconstrainted IO" : false,
- "VCCAUX" : "3.3",
+ "VCCAUX" : 3.3,
  "VHDL_Standard" : "VHDL_Std_1993",
  "Verilog_Standard" : "Vlg_Std_2001",
  "WAKE_UP" : "0",
