--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # ---------------------------
+# __SORT__
+# ---------------------------
+__SORT__
+# ---------------------------
 # Tang Nano BUILD files
 # ---------------------------
 **/impl/gwsynthesis
