--- a/010-Blinky1/Blinky/Boards/DE1SoC/Blinky.qsf
+++ b/010-Blinky1/Blinky/Boards/DE1SoC/Blinky.qsf
@@ -1,23 +1,24 @@
 # -------------------------------------------------------------------------- #
 #
-# Copyright (C) 1991-2013 Altera Corporation
-# Your use of Altera Corporation's design tools, logic functions 
+# Copyright (C) 2017  Intel Corporation. All rights reserved.
+# Your use of Intel Corporation's design tools, logic functions 
 # and other software and tools, and its AMPP partner logic 
 # functions, and any output files from any of the foregoing 
 # (including device programming or simulation files), and any 
 # associated documentation or information are expressly subject 
-# to the terms and conditions of the Altera Program License 
-# Subscription Agreement, Altera MegaCore Function License 
-# Agreement, or other applicable license agreement, including, 
-# without limitation, that your use is for the sole purpose of 
-# programming logic devices manufactured by Altera and sold by 
-# Altera or its authorized distributors.  Please refer to the 
-# applicable agreement for further details.
+# to the terms and conditions of the Intel Program License 
+# Subscription Agreement, the Intel Quartus Prime License Agreement,
+# the Intel MegaCore Function License Agreement, or other 
+# applicable license agreement, including, without limitation, 
+# that your use is for the sole purpose of programming logic 
+# devices manufactured by Intel and sold by Intel or its 
+# authorized distributors.  Please refer to the applicable 
+# agreement for further details.
 #
 # -------------------------------------------------------------------------- #
 #
-# Quartus II 64-Bit
-# Version 13.0.1 Build 232 06/12/2013 Service Pack 1 SJ Web Edition
+# Quartus Prime
+# Version 17.0.2 Build 602 07/19/2017 SJ Lite Edition
 # Date created = 01:01:01  September 1, 2023
 #
 # -------------------------------------------------------------------------- #
@@ -25,29 +26,27 @@
 # Notes:
 #
 # 1) The default values for assignments are stored in the file:
-#		DE1_assignment_defaults.qdf
+#		DE1SoC_assignment_defaults.qdf
 #    If this file doesn't exist, see file:
 #		assignment_defaults.qdf
 #
 # 2) Altera recommends that you do not modify this file. This
-#    file is updated automatically by the Quartus II software
+#    file is updated automatically by the Quartus Prime software
 #    and any changes you make may be lost or overwritten.
 #
 # -------------------------------------------------------------------------- #
 
 
-set_global_assignment -name FAMILY "Cyclone II"
-set_global_assignment -name DEVICE EP2C20F484C7
-set_global_assignment -name TOP_LEVEL_ENTITY DE1_Top
-set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
+set_global_assignment -name FAMILY "Cyclone V"
+set_global_assignment -name DEVICE 5CSEMA5F31C6
+set_global_assignment -name TOP_LEVEL_ENTITY Blinky_Top
+set_global_assignment -name ORIGINAL_QUARTUS_VERSION "17.0.2 Lite Edition"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "01:01:01  September 1, 2023"
-set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
+set_global_assignment -name LAST_QUARTUS_VERSION "17.0.2 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
@@ -56,14 +55,14 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 # PIN ASSIGNMENTS
 # -------------------------------------------------------------------------- #
 
-set_location_assignment PIN_L1 -to CLOCK_50
-set_location_assignment PIN_Y21 -to LEDG7
+set_location_assignment PIN_AF14 -to CLOCK_50
+set_location_assignment PIN_Y21 -to LEDR9
 
 # -------------------------------------------------------------------------- #
 # FILE ASSIGNMENTS
 # -------------------------------------------------------------------------- #
 
-set_global_assignment -name VERILOG_FILE DE1_Top.v
+set_global_assignment -name VERILOG_FILE Blinky_Top.v
 set_global_assignment -name VERILOG_FILE ../../Blinky.v
 
 # -------------------------------------------------------------------------- #
