--- a/010-Blinky1/Blinky/Boards/DE2/Blinky.qsf
+++ b/010-Blinky1/Blinky/Boards/DE2/Blinky.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone II"
 set_global_assignment -name DEVICE EP2C35F672C6
-set_global_assignment -name TOP_LEVEL_ENTITY DE2_Top
+set_global_assignment -name TOP_LEVEL_ENTITY Blinky_Top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "01:01:01  September 1, 2023"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
@@ -61,7 +61,7 @@ set_location_assignment PIN_AD12 -to LEDR17
 # FILE ASSIGNMENTS
 # -------------------------------------------------------------------------- #
 
-set_global_assignment -name VERILOG_FILE DE2_Top.v
+set_global_assignment -name VERILOG_FILE Blinky_Top.v
 set_global_assignment -name VERILOG_FILE ../../Blinky.v
 
 # -------------------------------------------------------------------------- #
