--- a/010-Blinky1/Blinky/Boards/DE2/Blinky.qsf
+++ b/010-Blinky1/Blinky/Boards/DE2/Blinky.qsf
@@ -25,7 +25,7 @@
 # Notes:
 #
 # 1) The default values for assignments are stored in the file:
-#		DE2_assignment_defaults.qdf
+#		Blinky_assignment_defaults.qdf
 #    If this file doesn't exist, see file:
 #		assignment_defaults.qdf
 #
