--- a/010-Blinky1/Blinky/Boards/DE10Lite/Blinky.qsf
+++ b/010-Blinky1/Blinky/Boards/DE10Lite/Blinky.qsf
@@ -19,14 +19,14 @@
 #
 # Quartus Prime
 # Version 17.0.2 Build 602 07/19/2017 SJ Lite Edition
-# Date created = 16:15:52  October 03, 2023
+# Date created = 01:01:01  September 1, 2023
 #
 # -------------------------------------------------------------------------- #
 #
 # Notes:
 #
 # 1) The default values for assignments are stored in the file:
-#		TestDE10Lite_assignment_defaults.qdf
+#		Blinky_assignment_defaults.qdf
 #    If this file doesn't exist, see file:
 #		assignment_defaults.qdf
 #
@@ -36,15 +36,19 @@
 #
 # -------------------------------------------------------------------------- #
 
-
 set_global_assignment -name FAMILY "MAX 10"
 set_global_assignment -name DEVICE 10M50DAF484C7G
 set_global_assignment -name TOP_LEVEL_ENTITY Blinky_Top
-set_global_assignment -name ORIGINAL_QUARTUS_VERSION 17.0.2
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "16:15:52  OCTOBER 03, 2023"
+set_global_assignment -name ORIGINAL_QUARTUS_VERSION "17.0.2 Lite Edition"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "01:01:01  September 1, 2023"
 set_global_assignment -name LAST_QUARTUS_VERSION "17.0.2 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 
 # -------------------------------------------------------------------------- #
 # PIN ASSIGNMENTS
@@ -60,10 +64,6 @@ set_location_assignment PIN_B11 -to LEDR9
 set_global_assignment -name VERILOG_FILE Blinky_Top.v
 set_global_assignment -name VERILOG_FILE ../../Blinky.v
 
+# -------------------------------------------------------------------------- #
 
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
